[package]
name = "stm32f0_cyfral_keys_reader"
version = "0.1.0"
edition = "2024"

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }
defmt = "1.1.0"
defmt-rtt = "1.2.0"

# Embassy - target updated to stm32f051r8
embassy-executor = { version = "0.10.0", features = ["platform-cortex-m", "executor-thread"] }
embassy-time = { version = "0.5.1" }
embassy-stm32 = { version = "0.6.0", features = ["stm32f051r8", "unstable-pac", "time-driver-any", "memory-x"] }

embedded-hal = "1.0.0"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
codegen-units = 1
debug = 2
lto = true
opt-level = "z"